[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-picasso"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "tifffile",
    "joblib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mosaic_picasso*"]
